# cad-code-generator

./: README.md  colab_driver.ipynb
cad-code-generator/: .gitignore  CHANGES.md  pyproject.toml  requirements.txt
cad-code-generator/scripts/: evaluate.py  train.py  train_tokenizer.py
cad-code-generator/src/cad_codegen/: __init__.py  data.py  decode.py  eval.py  inference.py  model.py  tokenizer.py  train.py  utils.py
